# Chess

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Player2.cpp  Player2.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp
